--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^1.14.1",
     "@remix-run/react": "^1.14.1",
     "@remix-run/serve": "^1.14.1",
+    "@remix-validated-form/with-zod": "^2.0.5",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
     "framer-motion": "^10.8.4",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
+    "remix-validated-form": "^4.6.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
