--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "yarn run prisma generate && yarn run remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc",
