--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "pnpm run prisma generate && pnpm run remix build",
+    "build": "pnpm run prisma:build && pnpm run remix:build",
+    "prisma:build": "pnpm run prisma generate",
+    "remix:build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc",
