--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "luxon": "^3.3.0",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.1.4",
-    "prisma": "^4.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
@@ -47,7 +46,8 @@
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
     "react-refresh": "^0.14.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "prisma": "^4.11.0"
   },
   "engines": {
     "node": ">=16"
