--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
+    "remix-utils": "^6.3.0",
     "remix-validated-form": "^4.6.10",
     "zod": "^3.21.4"
   },
@@ -45,9 +46,9 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
-    "typescript": "^5.0.4",
-    "prisma": "^4.11.0"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=16"
