--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "pnpm run prisma:build && pnpm run remix:build",
-    "prisma:build": "pnpm run prisma generate",
-    "remix:build": "remix build",
-    "dev": "TZ=America/Montreal remix dev",
-    "start": "remix-serve build",
+    "build": "run-s build:*",
+    "build:prisma": "prisma generate",
+    "build:remix": "remix build",
+    "build:server": "tsx ./build-server.ts",
+    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:server\" --no-restart",
+    "dev:server": "cross-env TZ=America/Montreal tsx watch --clear-screen=false --ignore \"app/**\" --ignore \"build/**\" --ignore \"node_modules/**\" ./index.js",
+    "format": "prettier --write .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "cross-env NODE_ENV=production node .",
     "typecheck": "tsc",
-    "prisma": "prisma"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^4.11.0",
+    "@remix-run/express": "^1.16.0",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
     "@remix-run/serve": "^1.16.0",
@@ -22,35 +27,54 @@
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
+    "@types/node": "^20.1.4",
+    "address": "^1.2.2",
     "aws-sdk": "^2.1012.0",
     "bcrypt": "^5.1.0",
+    "chalk": "^5.2.0",
+    "chokidar": "^3.5.3",
+    "close-with-grace": "^1.2.0",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "framer-motion": "^10.8.4",
+    "fs-extra": "^11.1.1",
+    "get-port": "^6.1.2",
+    "glob": "^10.2.4",
     "isbot": "^3.6.5",
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "mock-aws-s3": "^4.0.2",
+    "morgan": "^1.10.0",
     "nock": "^13.1.4",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
     "remix-utils": "^6.3.0",
     "remix-validated-form": "^4.6.10",
+    "tsx": "^3.12.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.16.0",
     "@remix-run/eslint-config": "^1.16.0",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
     "@types/jsdom": "^21.1.0",
+    "@types/morgan": "^1.9.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "cross-env": "^7.0.3",
     "eslint": "^8.27.0",
     "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=16"
+    "node": "18"
   }
 }
