--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "cross-env NODE_ENV=production node .",
     "typecheck": "tsc",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "prisma": "prisma"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
