--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
     "@types/node": "^20.1.4",
+    "@visx/xychart": "^3.1.2",
     "address": "^1.2.2",
     "aws-sdk": "^2.1012.0",
     "bcrypt": "^5.1.0",
