--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.11.0",
     "@remix-run/express": "^1.16.0",
     "@remix-run/node": "^1.16.0",
