--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,3 +76,10 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Deploy
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: "https://logger-pod-killer.addem.se/"
+          method: "POST"
+          bearerToken: ${{ secrets.DEPLOY_SECRET }}
