--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "version": "0.0.0",
   "private": true,
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
+    "build:sw": "esbuild service-worker/index.ts --bundle --outfile=public/sw.js",
     "build:prisma": "prisma generate",
     "build:remix": "remix build",
     "build:server": "tsx ./build-server.ts",
-    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:server\" --no-restart",
+    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:all\" --no-restart",
+    "dev:all": "run-p dev:server dev:sw",
+    "dev:sw": "pnpm run build:sw --watch",
     "dev:server": "cross-env TZ=America/Montreal tsx watch --clear-screen=false --ignore \"app/**\" --ignore \"build/**\" --ignore \"node_modules/**\" ./index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -74,6 +78,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.17.19",
     "eslint": "^8.27.0",
     "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
