--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prisma": "prisma generate",
     "build:remix": "remix build",
     "build:server": "tsx ./build-server.ts",
-    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:all\" --no-restart",
+    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:server\" --no-restart",
     "dev:all": "run-p dev:server dev:sw",
     "dev:sw": "pnpm run build:sw --watch",
     "dev:server": "cross-env TZ=America/Montreal tsx watch --clear-screen=false --ignore \"app/**\" --ignore \"build/**\" --ignore \"node_modules/**\" ./index.js",
@@ -64,6 +64,7 @@
     "remix-utils": "^6.3.0",
     "remix-validated-form": "^4.6.10",
     "tsx": "^3.12.7",
+    "web-push": "^3.6.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -77,6 +78,7 @@
     "@types/morgan": "^1.9.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/web-push": "^3.3.2",
     "cross-env": "^7.0.3",
     "esbuild": "^0.17.19",
     "eslint": "^8.27.0",
