--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:remix": "remix build",
     "build:server": "tsx ./build-server.ts",
     "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:all\" --no-restart",
-    "dev:all": "run-p dev:server dev:sw",
+    "dev:all": "run-p dev:server dev:sw dev:codegen",
     "dev:sw": "pnpm run build:sw --watch",
+    "dev:codegen": "graphql-codegen -r ts-node/register --config codegen.ts --watch",
     "dev:server": "cross-env TZ=America/Montreal tsx watch --clear-screen=false --ignore \"app/**\" --ignore \"build/**\" --ignore \"node_modules/**\" ./index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -26,6 +27,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@prisma/client": "^4.11.0",
     "@remix-run/express": "^1.17.0",
     "@remix-run/node": "^1.17.0",
@@ -49,6 +52,9 @@
     "fs-extra": "^11.1.1",
     "get-port": "^6.1.2",
     "glob": "^10.2.4",
+    "graphiql": "^2.4.7",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
@@ -68,6 +74,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.0",
     "@remix-run/dev": "^1.17.0",
     "@remix-run/eslint-config": "^1.17.0",
     "@total-typescript/ts-reset": "^0.4.2",
@@ -82,8 +91,10 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.17.19",
     "eslint": "^8.27.0",
+    "fast-glob": "^3.2.12",
     "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "engines": {
