--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: "3.7"
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:13
     restart: always
     environment:
       - POSTGRES_USER=postgres
