--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
     "build:sw": "esbuild service-worker/index.ts --bundle --outfile=public/sw.js",
     "build:prisma": "prisma generate",
     "build:remix": "remix build",
-    "build:server": "tsx ./build-server.ts",
-    "dev": "cross-env TZ=America/Montreal remix dev -c \"pnpm run dev:all\" --no-restart",
-    "dev:all": "run-p dev:server dev:sw dev:codegen",
+    "dev": "run-p dev:*",
+    "dev:remix": "cross-env TZ=America/Montreal remix dev",
     "dev:sw": "pnpm run build:sw --watch",
     "dev:codegen": "graphql-codegen -r ts-node/register --config codegen.ts --watch",
-    "dev:server": "cross-env TZ=America/Montreal tsx watch --clear-screen=false --ignore \"app/**\" --ignore \"build/**\" --ignore \"node_modules/**\" ./index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "cross-env NODE_ENV=production node .",
+    "start": "remix-serve build/index.js",
     "typecheck": "tsc",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
     "prisma": "prisma"
@@ -27,18 +26,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@graphql-tools/schema": "^10.0.0",
+    "@graphql-tools/schema": "^10.0.2",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@prisma/client": "^4.11.0",
-    "@remix-run/express": "^1.17.0",
-    "@remix-run/node": "^1.17.0",
-    "@remix-run/react": "^1.17.0",
-    "@remix-run/serve": "^1.17.0",
-    "@remix-validated-form/with-zod": "^2.0.5",
-    "@types/bcrypt": "^5.0.0",
-    "@types/lodash": "^4.14.191",
-    "@types/luxon": "^3.3.0",
-    "@types/node": "^20.1.4",
+    "@prisma/client": "^5.7.0",
+    "@remix-run/express": "^2.3.1",
+    "@remix-run/node": "^2.3.1",
+    "@remix-run/react": "^2.3.1",
+    "@remix-run/serve": "^2.3.1",
+    "@remix-validated-form/with-zod": "^2.0.7",
     "@visx/xychart": "^3.1.2",
     "address": "^1.2.2",
     "aws-sdk": "^2.1012.0",
@@ -52,7 +47,7 @@
     "fs-extra": "^11.1.1",
     "get-port": "^6.1.2",
     "glob": "^10.2.4",
-    "graphiql": "^2.4.7",
+    "graphiql": "^3.0.10",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
@@ -65,13 +60,13 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-auth": "^3.4.0",
-    "remix-auth-form": "^1.3.0",
-    "remix-utils": "^6.3.0",
-    "remix-validated-form": "^4.6.10",
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
+    "remix-utils": "^7.3.0",
+    "remix-validated-form": "^5.1.5",
     "tsx": "^3.12.7",
     "web-push": "^3.6.1",
-    "zod": "^3.21.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^4.0.1",
@@ -79,25 +74,28 @@
     "@graphql-codegen/typed-document-node": "^5.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.0",
-    "@remix-run/dev": "^1.17.0",
-    "@remix-run/eslint-config": "^1.17.0",
-    "@total-typescript/ts-reset": "^0.4.2",
-    "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.17",
+    "@remix-run/dev": "^2.3.1",
+    "@remix-run/eslint-config": "^2.3.1",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/compression": "1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^20.1.4",
     "@types/fs-extra": "^11.0.1",
     "@types/jsdom": "^21.1.0",
     "@types/morgan": "^1.9.4",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "@types/web-push": "^3.3.2",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.17.19",
-    "eslint": "^8.27.0",
+    "esbuild": "^0.19.8",
+    "eslint": "^8.55.0",
     "fast-glob": "^3.2.12",
-    "prisma": "^4.11.0",
-    "react-refresh": "^0.14.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": "18"
