--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "remix-utils": "^7.3.0",
     "remix-validated-form": "^5.1.5",
     "tsx": "^3.12.7",
+    "uuid": "^9.0.1",
     "web-push": "^3.6.1",
     "zod": "^3.22.4"
   },
@@ -77,17 +78,18 @@
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "1.7.5",
     "@types/express": "^4.17.21",
-    "@types/bcrypt": "^5.0.0",
-    "@types/lodash": "^4.14.191",
-    "@types/luxon": "^3.3.0",
-    "@types/node": "^20.1.4",
     "@types/fs-extra": "^11.0.1",
     "@types/jsdom": "^21.1.0",
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.3.0",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^20.1.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
     "@types/web-push": "^3.3.2",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.8",
