--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-tools/schema": "^10.0.2",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.0",
     "@remix-run/express": "^2.3.1",
     "@remix-run/node": "^2.3.1",
@@ -54,11 +55,13 @@
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
+    "match-sorter": "^6.3.1",
     "mock-aws-s3": "^4.0.2",
     "morgan": "^1.10.0",
     "nock": "^13.1.4",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
+    "react-aria-components": "1.0.0-rc.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
