--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "run-s build:*",
     "build:sw": "esbuild service-worker/index.ts --bundle --outfile=public/sw.js",
     "build:prisma": "prisma generate",
-    "build:remix": "remix build",
+    "build:remix": "remix vite:build",
     "dev": "run-p dev:*",
-    "dev:remix": "cross-env TZ=America/Montreal remix dev",
+    "dev:remix": "cross-env TZ=America/Montreal remix vite:dev",
     "dev:sw": "pnpm run build:sw --watch",
-    "dev:codegen": "graphql-codegen -r ts-node/register --config codegen.ts --watch",
+    "dev:codegen": "graphql-codegen-esm -r ts-node/register --config codegen.ts --watch",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve build/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
     "prisma": "prisma"
@@ -30,15 +30,16 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.0",
-    "@remix-run/express": "^2.3.1",
-    "@remix-run/node": "^2.3.1",
-    "@remix-run/react": "^2.3.1",
-    "@remix-run/serve": "^2.3.1",
+    "@remix-run/express": "^2.8.1",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
     "@remix-validated-form/with-zod": "^2.0.7",
-    "@visx/xychart": "^3.1.2",
+    "@visx/xychart": "^3.10.2",
     "address": "^1.2.2",
     "aws-sdk": "^2.1012.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.2",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
     "close-with-grace": "^1.2.0",
@@ -53,7 +54,6 @@
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
     "jsdom": "^21.1.1",
-    "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
     "mock-aws-s3": "^4.0.2",
@@ -62,6 +62,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remeda": "^1.60.1",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
     "remix-utils": "^7.3.0",
@@ -72,20 +73,20 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^4.0.1",
-    "@graphql-codegen/introspection": "^4.0.0",
-    "@graphql-codegen/typed-document-node": "^5.0.0",
-    "@graphql-codegen/typescript-operations": "^4.0.0",
-    "@graphql-codegen/typescript-resolvers": "^4.0.0",
-    "@remix-run/dev": "^2.3.1",
-    "@remix-run/eslint-config": "^2.3.1",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/typed-document-node": "^5.0.6",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@parcel/watcher": "^2.4.1",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/eslint-config": "^2.8.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "1.7.5",
     "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.1",
     "@types/jsdom": "^21.1.0",
-    "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.3.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.4",
@@ -98,8 +99,11 @@
     "eslint": "^8.55.0",
     "fast-glob": "^3.2.12",
     "prisma": "^5.7.0",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.2.10",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "engines": {
     "node": "18"
