--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcrypt-ts": "^5.0.2",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
+    "classnames": "^2.5.1",
     "close-with-grace": "^1.2.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
@@ -67,6 +68,7 @@
     "remix-auth-form": "^1.4.0",
     "remix-utils": "^7.3.0",
     "remix-validated-form": "^5.1.5",
+    "tailwind-merge": "^2.3.0",
     "tsx": "^3.12.7",
     "uuid": "^9.0.1",
     "web-push": "^3.6.1",
