--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "morgan": "^1.10.0",
     "nock": "^13.1.4",
     "npm-run-all": "^4.1.5",
+    "pino": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remeda": "^1.60.1",
