--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "bcrypt-ts": "^5.0.2",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "close-with-grace": "^1.2.0",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "framer-motion": "^10.8.4",
@@ -55,6 +57,7 @@
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
     "jsdom": "^21.1.1",
+    "lucide-react": "^0.469.0",
     "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
     "mock-aws-s3": "^4.0.2",
@@ -70,6 +73,7 @@
     "remix-utils": "^7.3.0",
     "remix-validated-form": "^5.1.5",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^3.12.7",
     "uuid": "^9.0.1",
     "web-push": "^3.6.1",
