--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
@@ -46,6 +49,7 @@
     "classnames": "^2.5.1",
     "close-with-grace": "^1.2.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "framer-motion": "^10.8.4",
