--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "@remix-validated-form/with-zod": "^2.0.7",
+    "@types/colormap": "^2.3.4",
     "@visx/xychart": "^3.10.2",
     "address": "^1.2.2",
     "aws-sdk": "^2.1012.0",
@@ -50,6 +51,7 @@
     "close-with-grace": "^1.2.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "colormap": "^2.3.2",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "framer-motion": "^10.8.4",
