--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
