--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
-    "@remix-run/express": "^2.8.1",
-    "@remix-run/node": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "@remix-run/serve": "^2.8.1",
+    "@remix-run/express": "^2.15.2",
+    "@remix-run/node": "^2.15.2",
+    "@remix-run/react": "2.15.2",
+    "@remix-run/serve": "^2.15.2",
     "@remix-validated-form/with-zod": "^2.0.7",
     "@types/colormap": "^2.3.4",
     "@visx/xychart": "^3.10.2",
@@ -93,8 +93,8 @@
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "@parcel/watcher": "^2.4.1",
-    "@remix-run/dev": "^2.8.1",
-    "@remix-run/eslint-config": "^2.8.1",
+    "@remix-run/dev": "^2.15.2",
+    "@remix-run/eslint-config": "^2.15.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "1.7.5",
