--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@remix-run/express": "^2.15.2",
     "@remix-run/node": "^2.15.2",
@@ -84,7 +85,8 @@
     "tsx": "^3.12.7",
     "uuid": "^9.0.1",
     "web-push": "^3.6.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
