--- a/package.json
+++ b/package.json
@@ -125,5 +125,11 @@
   },
   "engines": {
     "node": "18"
+  },
+  "pnpm": {
+    "overrides": {
+      "@radix-ui/react-dismissable-layer": "1.1.3",
+      "@radix-ui/react-focus-scope": "1.1.1"
+    }
   }
 }
